# laser_stripe_reconstruction

./: CMakeLists.txt  README.md  package.xml
calibrations/: calibration.yaml  turbot_calibration.yaml  uwsim_calibration.yaml
include/laser_line_reconstruction/: calibrator.h  detector.h  reconstructor.h  triangulator.h  uwsim_detector.h
include/laser_stripe_reconstruction/: detector.h  reconstructor.h  triangulator.h
launch/: bag_laser_calibration.launch  bag_reconstruction.launch  reconstruction.launch  uwsim_laser.launch  valldemossa_night_reconstruction.launch
scripts/: plot_points.py
src/: calibrator.cpp  detector.cpp  mover.cpp  node.cpp  reconstructor.cpp  registration.cpp  test_detector.cpp  triangulator.cpp  uwsim_detector.cpp
